# GateANN-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: aligned_file_reader.h  linux_aligned_file_reader.h  ssd_index.h
include/nbr/: nbr.h
include/utils/: filter_store.h  full_adj_index.h  hot_node_cache.h  percentile_stats.h  spmat_filter_store.h
scripts/: fig01_motivation.sh  fig04_pareto_main.sh  fig05_pareto_main.sh  fig05_thread_scaling.sh  fig06_io_reduction.sh  fig06_thread_scaling.sh  fig07_billion.sh  fig07_io_reduction.sh  fig08_billion.sh  fig08_yfcc.sh  fig09_vamana.sh  fig09_yfcc.sh  fig10_fdiskann.sh  fig10_vamana.sh  fig11_fdiskann.sh  fig11_selectivity.sh  fig12_nbrs_sweep.sh  fig12_selectivity.sh  fig13_nbrs_sweep.sh  fig13_zipf.sh  fig14_spatial.sh  fig14_zipf.sh  fig15_range.sh  fig15_spatial.sh  fig16_bw_sweep.sh  fig16_range.sh  fig17_ablation.sh  fig17_bw_sweep.sh  fig18_ablation.sh  generate_all_figures.py  generate_correlated_labels.py  generate_range_labels.py  install_deps.sh  plot_bw_sweep.py  plot_early_filter.py  plot_fdiskann.py  plot_io_reduction.py  plot_motivation.py  plot_nbrs_pareto.py  plot_nbrs_qps.py  (+18 more)
src/: CMakeLists.txt
src/search/: beam_search.cpp  pipe_search.cpp
src/utils/: linux_aligned_file_reader.cpp
tests/: CMakeLists.txt  search_disk_index_fa.cpp  search_disk_index_yfcc.cpp  search_mem_fa.cpp
